--- a/_posts/2013-08-05-hello.markdown
+++ b/_posts/2013-08-05-hello.markdown
@@ -22,7 +22,7 @@ what [Richard Sewell's](http://www.jarkman.co.uk) concept of 'Not This Now' woul
 
 <img src="/assets/not_this_now.jpg" width="500" alt="Not This Now"/>
 
-The answer lies in the way toys like these off ideas. People listen to the radio typically while they are doing 
+The answer lies in the way toys like these generate ideas. People listen to the radio typically while they are doing 
 something else such as working, driving, cooking - and they don't tend to interact with the physical radio much 
 once it's on - they tend not to change station for example. Making the avoider got us thinking: the fact that 
 people don't tend to change radio station probably masks irritation about some aspects of their listening, where 
